--- a/src/theme/sidebar/_index.scss
+++ b/src/theme/sidebar/_index.scss
@@ -19,7 +19,7 @@
 //BetterFolders (Vencord)
 #{c(main base)}.vc-betterFolders-sidebar-grid #{c(sidebar sidebar)} {
   grid-template-areas: 'guilds betterFoldersSidebar sidebar' 'guilds betterFoldersSidebar panels';
-  grid-template-columns: [start] min-content [guilds-end] min-content [betterFoldersSidebar-end] auto [end];
+  grid-template-columns: [start] min-content [guildsEnd] min-content [betterFoldersSidebarEnd] auto [end];
   width: auto !important;
 }
 .base_c48ade.vc-betterFolders-sidebar-grid {
