--- a/src/theme/sidebar/_userPanel.scss
+++ b/src/theme/sidebar/_userPanel.scss
@@ -9,7 +9,6 @@
   width: 100%;
   background: var(--background-secondary);
   padding-bottom: 8px;
-  overflow: hidden;
   grid-area: panels;
 }
 
